Test Org - Speridian/src/objects/BA_Authorization_Referrals__c.object
<CustomObject>
    <fields>
        <fullName>ba_EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Authorization/Referrals</relationshipLabel>
        <relationshipName>Authorization_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Provider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Referral Source Provider Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Authorization/Referrals (Referral Source Provider Id)</relationshipLabel>
        <relationshipName>Authorization_Referrals1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Authorization/Referrals</label>
    <nameField>
        <displayFormat>REF{00000000}</displayFormat>
        <label>Authorization/Referral Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorization/Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>